# IMP

./: .imp.cabal.kate-swp  README.md  imp.cabal  program.imp
app/: Main.hs  MakeGolden.hs
samples/expected/: 01_simple.golden  02_if_then_else.golden  03_while.golden  04_arithmetic.golden  05_boolean.golden  06_coments.golden  07_whitespace.golden  08_maximal_munch.golden  09_complex.golden  10_nested.golden  11_comparisons.golden  12_sequential.golden  13_parentheses.golden  14_all_operators.golden
samples/imp/: 02_if_then_else.imp  03_while.imp  04_arithmetic.imp  05_boolean.imp  06_coments.imp  07_whitespace.imp  08_maximal_munch.imp  09_complex.imp  10_nested.imp  11_comparisons.imp  12_sequential.imp  13_parentheses.imp  14_all_operators.imp
scripts/: create_golden.sh
specs/: IMP.md
src/Com/Syrion/Models/Automata/: AFD.hs  AFDMin.hs  AFN.hs  AFNEp.hs  MDD.hs
src/Com/Syrion/Models/Lenguajes/: ImpFast.hs  ImpSpec.hs
src/Com/Syrion/Models/Lexer/: Lexer.hs  Token.hs
src/Com/Syrion/Models/Regex/: ExprReg.hs
src/Com/Syrion/Utils/: Util.hs
test/: Spec.hs
