cabal-version:       3.8
name:                imp
version:             0.1.0.0
build-type:          Simple

library
  hs-source-dirs: src
  exposed-modules:
      Com.Syrion.Models.Automata.AFD
      Com.Syrion.Models.Automata.AFDMin
      Com.Syrion.Models.Automata.AFNEp
      Com.Syrion.Models.Automata.AFN
      Com.Syrion.Models.Automata.MDD
      Com.Syrion.Models.Regex.ExprReg
      Com.Syrion.Models.Lexer.Token
      Com.Syrion.Models.Lexer.Lexer
      Com.Syrion.Models.Lenguajes.ImpSpec
      Com.Syrion.Models.Lenguajes.ImpFast
      Com.Syrion.Utils.Util
  build-depends:
      base       >=4.16 && <5
    , containers
    , text
  default-language: Haskell2010

executable imp
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
      base
    , text
    , containers
    , imp
  default-language: Haskell2010

test-suite imp-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
      base
    , containers
    , imp
  default-language: Haskell2010
